# LeadBot

./: .env.example  .gitignore  README.md  leads.db  main.py  pyproject.toml  server.py  systemPrompt.txt
app/: cache.py  hunter.py  llm.py  serp.py
static/: index.css  index.html  index.js
