[project]
name = "pythonleadagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gspread>=6.2.1",
    "langchain-groq>=1.1.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "serpapi>=1.0.2",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1",
]

